--- a/a2/index.html
+++ b/a2/index.html
@@ -6,13 +6,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!---Edit the name to whatever you want it to show in here: https://i.imgur.com/5H3Hyjq.png --><title>Name</title>
+    <!---Edit the name to whatever you want it to show in here: https://i.imgur.com/sDztVc3.png --><title>Name</title>
 
         <!-- here as well (this will show on Google & whenever you type in the link for the site on discord or twitter or whatever, will create an embed) -->
-        <meta property="og:title" content="Site Title" /> 
+        <meta property="og:title" content="kib" /> 
         <meta property="og:type" content="website" />
         <meta property="og:url" content="http://my.site.com" />
-        <meta property="og:image" content="http://my.site.com/images/thumb.png" />
+        <meta property="og:image" content="https://i.imgur.com/sDztVc3.png" />
         <meta property="og:description" content="Site description" />
         <meta name="theme-color" content="#FF0000">
         <meta name="twitter:card" content="summary_large_image">
@@ -28,17 +28,17 @@
         </div>
         <div class="wrapper">
             <div class="inner">
-                <!---your name--><h1>Vertical</h1>
-                <!---slogan or some shit u want it to say--><h2>shoutout lask aka defile</h2>
+                <!---your name--><h1>kib</h1>
+                <!---slogan or some shit u want it to say--><h2>suck my cock</h2>
                 <div class="row">
                     <div class="column">
-                        <a class="hvr-grow" href="https://discordapp.com/users/UR DISCORD ID" target="_blank"><img src="assets/discord-512.webp" width="50" height="50"></a>
+                        <a class="hvr-grow" href="https://discordapp.com/users/360586563899621377" target="_blank"><img src="assets/discord-512.webp" width="50" height="50"></a>
                         </div>
                     <div class="column">
-                        <a class="hvr-grow" href="https://ogusers.com/YOUROGU" target="_blank"><img src="assets/550df541f6e00bef27e4e890ab5349d5.webp" width="50" height="50"></a>
+                        <a class="hvr-grow" href="https://ogusers.com/kibble" target="_blank"><img src="assets/550df541f6e00bef27e4e890ab5349d5.webp" width="50" height="50"></a>
                     </div>
                     <div class="column">
-                        <a class="hvr-grow" href="https://instagram.com/YOURIG" target="_blank"><img src="assets/1024px-Instagram_icon.png" width="50" height="50"></a>
+                        <a class="hvr-grow" href="https://instagram.com/wtftonka" target="_blank"><img src="assets/1024px-Instagram_icon.png" width="50" height="50"></a>
                     </div>
                 </div>
                 
