--- a/a2/index.html
+++ b/a2/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!---Edit the name to whatever you want it to show in here: https://i.imgur.com/sDztVc3.png --><title>Name</title>
+    <!---Edit the name to whatever you want it to show in here: https://i.imgur.com/sDztVc3.png --><title>kib</title>
 
         <!-- here as well (this will show on Google & whenever you type in the link for the site on discord or twitter or whatever, will create an embed) -->
         <meta property="og:title" content="kib" /> 
