--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <!-- here as well (this will show on Google & whenever you type in the link for the site on discord or twitter or whatever, will create an embed) -->
         <meta property="og:title" content="kib" /> 
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="http://my.site.com" />
+        <meta property="og:url" content="kib.lol" />
         <meta property="og:image" content="https://i.imgur.com/sDztVc3.png" />
-        <meta property="og:description" content="Site description" />
-        <meta name="theme-color" content="#FF0000">
+        <meta property="og:description" content="Socials and shit" />
+        <meta name="theme-color" content="#d37e8e">
         <meta name="twitter:card" content="summary_large_image">
 
 
