--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!---Edit the name to whatever you want it to show in here: https://i.imgur.com/sDztVc3.png --><title>kib</title>
+    <title>kib</title>
 
-        <!-- here as well (this will show on Google & whenever you type in the link for the site on discord or twitter or whatever, will create an embed) -->
         <meta property="og:title" content="kib" /> 
         <meta property="og:type" content="website" />
         <meta property="og:url" content="kib.lol" />
@@ -19,17 +18,17 @@
 
 
         <link href="assets/js/css/hover-min.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/style.css"> <!--Don't remove this, it gives the styles implemented into the front end so if you take this off, it will look like html2-->
+        <link rel="stylesheet" href="assets/style.css"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap">
     </head>
     <body>
         <div class="background">
-            <img src="assets/background.gif" alt="background image"/> <!--Replace the gif file with something else-->
+            <img src="assets/background.gif" alt="background image"/> 
         </div>
         <div class="wrapper">
             <div class="inner">
-                <!---your name--><h1>kib</h1>
-                <!---slogan or some shit u want it to say--><h2>suck my cock</h2>
+                <h1>kib</h1>
+                <h2>She gone call me when she want i won't answer</h2>
                 <div class="row">
                     <div class="column">
                         <a class="hvr-grow" href="https://discordapp.com/users/360586563899621377" target="_blank"><img src="assets/discord-512.webp" width="50" height="50"></a>
@@ -46,10 +45,10 @@
         </div>
         <span class="audio" onclick="playAudio()">(Click for audio)</span> 
         <audio controls autoplay>
-            <source src="assets/soundtrack.mp3" type="audio/mpeg"> <!--To swap the mp3, just replace the mp3 file inside of this folder.-->
+            <source src="assets/soundtrack.mp3" type="audio/mpeg"> 
         </audio>
         <script>
-            function playAudio() { // this speaks for itself ig, just calls the function
+            function playAudio() { 
                 document.querySelector('audio').play()
             }
         </script>
