--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta property="og:title" content="kib" /> 
         <meta property="og:type" content="website" />
         <meta property="og:url" content="kib.lol" />
-        <meta property="og:image" content="https://i.imgur.com/sDztVc3.png" />
+        <meta property="og:image" content="" />
         <meta property="og:description" content="Socials and shit" />
         <meta name="theme-color" content="#d37e8e">
         <meta name="twitter:card" content="summary_large_image">
