--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="wrapper">
             <div class="inner">
                 <h1>kib</h1>
-                <h2>shit making me confused</h2>
+                <h2>wtf!!!!</h2>
                 <div class="row">
                     <div class="column">
                         <a class="hvr-grow" href="https://discordapp.com/users/360586563899621377" target="_blank"><img src="assets/discord-512.webp" width="50" height="50"></a>
