--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a class="hvr-grow" href="https://ogusers.com/kibble" target="_blank"><img src="assets/550df541f6e00bef27e4e890ab5349d5.webp" width="50" height="50"></a>
                     </div>
                     <div class="column">
-                        <a class="hvr-grow" href="https://instagram.com/wtftonka" target="_blank"><img src="assets/1024px-Instagram_icon.png" width="50" height="50"></a>
+                        <a class="hvr-grow" href="https://instagram.com/" target="_blank"><img src="assets/1024px-Instagram_icon.png" width="50" height="50"></a>
                     </div>
                 </div>
                 
